# go-secure/MyGram/controllers/photoControllerImpl.go
@@ -7,6 +7,7 @@ import (
 	"fmt"
 	"net/http"
 	"strconv"
+	"strings"
 
 	"github.com/gin-gonic/gin"
 	"github.com/go-playground/validator/v10"
@@ -123,78 +124,102 @@ func (handler *photoHandler) CreatePhoto(c *gin.Context) {
 	} else {
 		err = c.ShouldBind(&photo)
 	}
+
+	// ----------------------- validation version 1
+	// if err != nil {
+	// 	if errors, ok := err.(validator.ValidationErrors); ok {
+	// 		var errMsg string
+	// 		for _, e := range errors {
+	// 			switch {
+	// 			case len(errors) == 2:
+	// 				if e.Tag() == "required" {
+	// 					field_title, _ := reflect.TypeOf(photo).FieldByName("Title")
+	// 					field_photo_url, _ := reflect.TypeOf(photo).FieldByName("PhotoURL")
+	// 					errMsg = fmt.Sprintf("%s and %s is required.", field_title.Tag.Get("json"), field_photo_url.Tag.Get("json"))
+	// 				} else if e.Tag() == "required" || e.Tag() == "url" {
+	// 					field_title, _ := reflect.TypeOf(photo).FieldByName("Title")
+	// 					field_photo_url, _ := reflect.TypeOf(photo).FieldByName("PhotoURL")
+	// 					errMsg = fmt.Sprintf("%s is required and %s is invalid url.", field_title.Tag.Get("json"), field_photo_url.Tag.Get("json"))
+	// 				} else {
+	// 					errMsg = "title and photo_url cannot be empty"
+	// 				}
+	// 			case e.Field() == "Title":
+	// 				if e.Tag() == "required" {
+	// 					field, _ := reflect.TypeOf(photo).FieldByName("Title")
+	// 					errMsg = fmt.Sprintf("%s is required.", field.Tag.Get("json"))
+	// 				} else {
+	// 					errMsg = "title cannot be empty"
+	// 				}
+	// 			case e.Field() == "PhotoURL":
+	// 				if len(errors) == 2 {
+	// 					field_photo_url, _ := reflect.TypeOf(photo).FieldByName("PhotoURL")
+	// 					errMsg = fmt.Sprintf("%s is required and invalid url.", field_photo_url.Tag.Get("json"))
+	// 				} else if e.Tag() == "required" {
+	// 					field_photo_url, _ := reflect.TypeOf(photo).FieldByName("PhotoURL")
+	// 					errMsg = fmt.Sprintf("%s is required.", field_photo_url.Tag.Get("json"))
+	// 				} else if e.Tag() == "url" {
+	// 					field_photo_url, _ := reflect.TypeOf(photo).FieldByName("PhotoURL")
+	// 					errMsg = fmt.Sprintf("%s is invalid url.", field_photo_url.Tag.Get("json"))
+	// 				} else {
+	// 					errMsg = "photo_url cannot be empty"
+	// 				}
+	// 			}
+	// 		}
+	// 		c.AbortWithStatusJSON(http.StatusBadRequest, model.ResponseErrorGeneral{
+	// 			Status:  "Bad Request json/form",
+	// 			Message: errMsg,
+	// 		})
+	// 		return
+	// 	} else {
+	// 		// all error json / form
+	// 		c.AbortWithStatusJSON(http.StatusBadRequest, model.ResponseErrorGeneral{
+	// 			Status:  "Bad Request json/form",
+	// 			Message: err.Error(),
+	// 		})
+	// 		return
+	// 	}
+	// }
+
+	// ----------------------- validation version 2
 	if err != nil {
+		if validationErrors, ok := err.(validator.ValidationErrors); ok {
+			// Convert validation errors to map of error messages
+			errorsMap := make(map[string]string)
+			for _, validationError := range validationErrors {
+				// Use the field name as the error key
+				field := validationError.Field()
+				// validation error tag
+				switch validationError.Tag() {
+				case "url":
+					switch field {
+					case "PhotoURL":
+						errorsMap[field] = fmt.Sprintf("%s is invalid url.", field)
+					}
+				default:
+					errorsMap[field] = fmt.Sprintf("%s is required", field)
+				}
+			}
+			// Join error messages into a single string
+			var errorMessages []string
+			for _, errorMessage := range errorsMap {
+				errorMessages = append(errorMessages, errorMessage)
+			}
+			errorMessageString := strings.Join(errorMessages, ", ")
+
+			// Return errors map as JSON response
+			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+				"error":   "Bad Request json/form",
+				"message": errorMessageString,
+			})
+			return
+		}
+		// Error json unmarshal / error binding json/form
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			"error":   "Bad Request",
+			"error":   "Bad Request json/form",
 			"message": err.Error(),
 		})
 		return
 	}
-
-	if err := handler.validate.Struct(photo); err != nil {
-		if errors, ok := err.(validator.ValidationErrors); ok {
-			var errMsg string
-			for _, e := range errors {
-				switch e.Field() {
-				case "Title":
-					errMsg = "Invalid title."
-				case "Caption":
-					errMsg = "Invalid caption."
-				case "PhotoURL":
-					errMsg = "Invalid photo url."
-				}
-			}
-			c.AbortWithStatusJSON(http.StatusBadRequest, model.ResponseErrorGeneral{
-				Status:  "Bad Request json/form",
-				Message: errMsg,
-			})
-			return
-		}
-	}
-
-	// if contentType == appJson {
-	// 	if err := c.ShouldBindJSON(&photo); err != nil {
-	// 		if errors, ok := err.(validator.ValidationErrors); ok {
-	// 			var errMsg string
-	// 			for _, e := range errors {
-	// 				switch e.Field() {
-	// 				case "Title":
-	// 					errMsg = "Invalid title."
-	// 				case "Caption":
-	// 					errMsg = "Invalid caption."
-	// 				case "PhotoURL":
-	// 					errMsg = "Invalid photo url."
-	// 				}
-	// 			}
-	// 			c.AbortWithStatusJSON(http.StatusBadRequest, model.ResponseErrorGeneral{
-	// 				Status:  "Bad Request json",
-	// 				Message: errMsg,
-	// 			})
-	// 			return
-	// 		}
-	// 	}
-	// } else {
-	// 	if err := c.ShouldBind(&photo); err != nil {
-	// 		if errors, ok := err.(validator.ValidationErrors); ok {
-	// 			var errMsg string
-	// 			for _, e := range errors {
-	// 				switch e.Field() {
-	// 				case "Title":
-	// 					errMsg = "Invalid title."
-	// 				case "Caption":
-	// 					errMsg = "Invalid caption."
-	// 				case "PhotoURL":
-	// 					errMsg = "Invalid photo url."
-	// 				}
-	// 			}
-	// 			c.AbortWithStatusJSON(http.StatusBadRequest, model.ResponseErrorGeneral{
-	// 				Status:  "Bad Request form",
-	// 				Message: errMsg,
-	// 			})
-	// 			return
-	// 		}
-	// 	}
-	// }
 
 	if res, err := handler.photoService.Create(c, photo, userID); err != nil {
 		c.JSON(http.StatusBadRequest, model.ResponseErrorGeneral{
@@ -245,78 +270,102 @@ func (handler *photoHandler) UpdatePhoto(c *gin.Context) {
 	} else {
 		err = c.ShouldBind(&photo)
 	}
+
+	// ----------------------- validation version 1
+	// if err != nil {
+	// 	if errors, ok := err.(validator.ValidationErrors); ok {
+	// 		var errMsg string
+	// 		for _, e := range errors {
+	// 			switch {
+	// 			case len(errors) == 2:
+	// 				if e.Tag() == "required" {
+	// 					field_title, _ := reflect.TypeOf(photo).FieldByName("Title")
+	// 					field_photo_url, _ := reflect.TypeOf(photo).FieldByName("PhotoURL")
+	// 					errMsg = fmt.Sprintf("%s and %s is required.", field_title.Tag.Get("json"), field_photo_url.Tag.Get("json"))
+	// 				} else if e.Tag() == "required" || e.Tag() == "url" {
+	// 					field_title, _ := reflect.TypeOf(photo).FieldByName("Title")
+	// 					field_photo_url, _ := reflect.TypeOf(photo).FieldByName("PhotoURL")
+	// 					errMsg = fmt.Sprintf("%s is required and %s is invalid url.", field_title.Tag.Get("json"), field_photo_url.Tag.Get("json"))
+	// 				} else {
+	// 					errMsg = "title and photo_url cannot be empty"
+	// 				}
+	// 			case e.Field() == "Title":
+	// 				if e.Tag() == "required" {
+	// 					field, _ := reflect.TypeOf(photo).FieldByName("Title")
+	// 					errMsg = fmt.Sprintf("%s is required.", field.Tag.Get("json"))
+	// 				} else {
+	// 					errMsg = "title cannot be empty"
+	// 				}
+	// 			case e.Field() == "PhotoURL":
+	// 				if len(errors) == 2 {
+	// 					field_photo_url, _ := reflect.TypeOf(photo).FieldByName("PhotoURL")
+	// 					errMsg = fmt.Sprintf("%s is required and invalid url.", field_photo_url.Tag.Get("json"))
+	// 				} else if e.Tag() == "required" {
+	// 					field_photo_url, _ := reflect.TypeOf(photo).FieldByName("PhotoURL")
+	// 					errMsg = fmt.Sprintf("%s is required.", field_photo_url.Tag.Get("json"))
+	// 				} else if e.Tag() == "url" {
+	// 					field_photo_url, _ := reflect.TypeOf(photo).FieldByName("PhotoURL")
+	// 					errMsg = fmt.Sprintf("%s is invalid url.", field_photo_url.Tag.Get("json"))
+	// 				} else {
+	// 					errMsg = "photo_url cannot be empty"
+	// 				}
+	// 			}
+	// 		}
+	// 		c.AbortWithStatusJSON(http.StatusBadRequest, model.ResponseErrorGeneral{
+	// 			Status:  "Bad Request json/form",
+	// 			Message: errMsg,
+	// 		})
+	// 		return
+	// 	} else {
+	// 		// all error json / form
+	// 		c.AbortWithStatusJSON(http.StatusBadRequest, model.ResponseErrorGeneral{
+	// 			Status:  "Bad Request json/form",
+	// 			Message: err.Error(),
+	// 		})
+	// 		return
+	// 	}
+	// }
+
+	// ----------------------- validation version 2
 	if err != nil {
+		if validationErrors, ok := err.(validator.ValidationErrors); ok {
+			// Convert validation errors to map of error messages
+			errorsMap := make(map[string]string)
+			for _, validationError := range validationErrors {
+				// Use the field name as the error key
+				field := validationError.Field()
+				// validation error tag
+				switch validationError.Tag() {
+				case "url":
+					switch field {
+					case "PhotoURL":
+						errorsMap[field] = fmt.Sprintf("%s is invalid url.", field)
+					}
+				default:
+					errorsMap[field] = fmt.Sprintf("%s is required", field)
+				}
+			}
+			// Join error messages into a single string
+			var errorMessages []string
+			for _, errorMessage := range errorsMap {
+				errorMessages = append(errorMessages, errorMessage)
+			}
+			errorMessageString := strings.Join(errorMessages, ", ")
+
+			// Return errors map as JSON response
+			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+				"error":   "Bad Request json/form",
+				"message": errorMessageString,
+			})
+			return
+		}
+		// Error json unmarshal / error binding json/form
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			"error":   "Bad Request",
+			"error":   "Bad Request json/form",
 			"message": err.Error(),
 		})
 		return
 	}
-
-	if err := handler.validate.Struct(photo); err != nil {
-		if errors, ok := err.(validator.ValidationErrors); ok {
-			var errMsg string
-			for _, e := range errors {
-				switch e.Field() {
-				case "Title":
-					errMsg = "Invalid title."
-				case "Caption":
-					errMsg = "Invalid caption."
-				case "PhotoURL":
-					errMsg = "Invalid photo url."
-				}
-			}
-			c.AbortWithStatusJSON(http.StatusBadRequest, model.ResponseErrorGeneral{
-				Status:  "Bad Request json/form",
-				Message: errMsg,
-			})
-			return
-		}
-	}
-
-	// if contentType == appJson {
-	// 	if err := c.ShouldBindJSON(&photo); err != nil {
-	// 		if errors, ok := err.(validator.ValidationErrors); ok {
-	// 			var errMsg string
-	// 			for _, e := range errors {
-	// 				switch e.Field() {
-	// 				case "Title":
-	// 					errMsg = "Invalid title."
-	// 				case "Caption":
-	// 					errMsg = "Invalid caption."
-	// 				case "PhotoURL":
-	// 					errMsg = "Invalid photo url."
-	// 				}
-	// 			}
-	// 			c.AbortWithStatusJSON(http.StatusBadRequest, model.ResponseErrorGeneral{
-	// 				Status:  "Bad Request json",
-	// 				Message: errMsg,
-	// 			})
-	// 			return
-	// 		}
-	// 	}
-	// } else {
-	// 	if err := c.ShouldBind(&photo); err != nil {
-	// 		if errors, ok := err.(validator.ValidationErrors); ok {
-	// 			var errMsg string
-	// 			for _, e := range errors {
-	// 				switch e.Field() {
-	// 				case "Title":
-	// 					errMsg = "Invalid title."
-	// 				case "Caption":
-	// 					errMsg = "Invalid caption."
-	// 				case "PhotoURL":
-	// 					errMsg = "Invalid photo url."
-	// 				}
-	// 			}
-	// 			c.AbortWithStatusJSON(http.StatusBadRequest, model.ResponseErrorGeneral{
-	// 				Status:  "Bad Request form",
-	// 				Message: errMsg,
-	// 			})
-	// 			return
-	// 		}
-	// 	}
-	// }
 
 	if res, err := handler.photoService.Update(c, photo, uint(photoId), userID); err != nil {
 		c.JSON(http.StatusBadRequest, model.ResponseErrorGeneral{
