# go-secure/MyGram/docs/swagger.yaml
@@ -42,10 +42,15 @@ definitions:
         type: string
       photo_id:
         type: integer
-      user_id:
-        type: integer
     required:
     - message
+    - photo_id
+    type: object
+  model.RequestGetComment:
+    properties:
+      photo_id:
+        type: integer
+    required:
     - photo_id
     type: object
   model.RequestPhoto:
@@ -75,7 +80,6 @@ definitions:
       email:
         type: string
       password:
-        minLength: 6
         type: string
     required:
     - email
@@ -84,7 +88,6 @@ definitions:
   model.RequestUserRegister:
     properties:
       age:
-        maximum: 130
         minimum: 8
         type: integer
       email:
@@ -143,6 +146,13 @@ paths:
       consumes:
       - application/json
       description: Get all comment by photo id user
+      parameters:
+      - description: Get All Comment By photo id
+        in: body
+        name: requestGet
+        required: true
+        schema:
+          $ref: '#/definitions/model.RequestGetComment'
       produces:
       - application/json
       responses:
@@ -225,6 +235,42 @@ paths:
       summary: Delete comment by photo id user
       tags:
       - Comment
+    get:
+      consumes:
+      - application/json
+      description: Get comment by photo id user
+      parameters:
+      - description: Comment ID
+        in: path
+        name: commentId
+        required: true
+        type: integer
+      - description: Get Comment By photo id and comment id in path params
+        in: body
+        name: requestGet
+        required: true
+        schema:
+          $ref: '#/definitions/model.RequestGetComment'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Comment'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ResponseErrorGeneral'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.ResponseErrorGeneral'
+      security:
+      - JWT: []
+      summary: Get comment by photo id user
+      tags:
+      - Comment
     put:
       consumes:
       - application/json
@@ -257,37 +303,6 @@ paths:
       security:
       - JWT: []
       summary: Update comment by photo id user
-      tags:
-      - Comment
-  /comment/{photoId}:
-    get:
-      consumes:
-      - application/json
-      description: Get comment by photo id user
-      parameters:
-      - description: Comment ID
-        in: path
-        name: commentId
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Comment'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/model.ResponseErrorGeneral'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/model.ResponseErrorGeneral'
-      security:
-      - JWT: []
-      summary: Get comment by photo id user
       tags:
       - Comment
   /photo:
